--- a/restaurant/restaurant/src/main/resources/application.properties
+++ b/restaurant/restaurant/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/RestaurantDB
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_db
 spring.datasource.username=root
 spring.datasource.password=Sandeep123@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
