--- a/restaurant/restaurant/src/main/resources/application.properties
+++ b/restaurant/restaurant/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_db
 spring.datasource.username=root
 spring.datasource.password=Sandeep123@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+
+#spring.security.user.name=sandeep
+#spring.security.user.password=Sandeep123@
 
